proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: http_redirector
    address:
      socket_address: {address: 0.0.0.0, port_value: 80}

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: genbi_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                redirect:
                  path_redirect: "/"
                  https_redirect: true
          http_filters:
          - name: envoy.router
            config: {}

  - name: https_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:

      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          upgrade_configs:
          - upgrade_type: "websocket"
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
              format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" resp_duration:%RESPONSE_DURATION%:%RESPONSE_TX_DURATION%\n"
          route_config:
            name: registration_route
            virtual_hosts:

            - name: genbi
              domains: ["genbi.idnetbrain.com:443", "genbi.idnetbrain.com"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: genbi
                  timeout: 360s

          http_filters:
          - name: envoy.gzip
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.gzip.v2.Gzip
              memory_level: 9
              compression_level: BEST
          - name: envoy.router

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/letsencrypt/live/castellumdigital.org-0001/fullchain.pem"
                private_key:
                  filename: "/etc/letsencrypt/live/castellumdigital.org-0001/privkey.pem"

  clusters:

  - name: genbi
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: myhost, port_value: 5000 }}]
